fix overflow

--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -10,6 +10,10 @@
     max-width: 480px;
   }
 
+  @media screen and (max-width: 767px) {
+    overflow: hidden;
+  }
+
   @include tablet {
     padding-left: 32px;
     padding-right: 32px;
